WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.4.2-dev, 2013-06-08


This document lists all changes for each version.

For a list of important changes that require manual action, please look at
http://weechat.org/files/releasenotes/ReleaseNotes-devel.html[release notes]
(file 'NEWS' in sources).


Version 0.4.2 (under dev!)
--------------------------

* core: add "proxy" infolist and hdata
* core: fix random crash on mouse actions (bug #39094)
* core: set options weechat.look.color_inactive_{buffer|window} to "on" by
  default
* core: add infolist "layout" and hdata "layout", "layout_buffer" and
  "layout_window"
* core: fix line alignment when option weechat.look.buffer_time_format is set
  to empty string
* aspell: add support of enchant library (patch #6858)
* irc: add support of special variables $nick/$channel/$server in commands
  /allchan and /allserv
* irc: add option irc.look.nick_color_hash: hash algorithm to find nick color
  (patch #8062)
* irc: fix multiple nicks in command /query (separated by commas): open one
  buffer per nick
* relay: fix binding to an IP address (bug #39119)
* xfer: fix compilation on OpenBSD (bug #39071)

Version 0.4.1 (2013-05-20)
--------------------------

* core: fix display of long lines without time (message beginning with two tabs)
* core: make nick prefix/suffix dynamic (not stored in the line): move options
  irc.look.nick_{prefix|suffix} to weechat.look.nick_{prefix|suffix} and options
  irc.color.nick_{prefix|suffix} to weechat.color.chat_nick_{prefix|suffix},
  add new options weechat.look.prefix_align_more_after,
  weechat.look.prefix_buffer_align_more_after, logger.file.nick_{prefix|suffix}
  (bug #37531)
* core: reset scroll in window before zooming on a merged buffer (bug #38207)
* core: install icon file (patch #7972)
* core: fix refresh of item "completion": clear it after any action that is
  changing content of command line and after switch of buffer (bug #38214)