@@ -798,6 +798,11 @@
 ** type: integer
 ** values: 1 .. 2147483647 (default value: `30`)
 
+* [[option_weechat.network.proxy_curl]] *weechat.network.proxy_curl*
+** description: `name of proxy used for download of URLs with Curl (used to download list of scripts and in scripts calling function hook_process); the proxy must be defined with command /proxy`
+** type: string
+** values: any string (default value: `""`)
+
 * [[option_weechat.plugin.autoload]] *weechat.plugin.autoload*
 ** description: `comma separated list of plugins to load automatically at startup, "*" means all plugins found, a name beginning with "!" is a negative value to prevent a plugin from being loaded, names can start or end with "*" to match several plugins (examples: "*" or "*,!lua,!tcl")`
 ** type: string
