@@ -259,6 +259,7 @@ extern struct t_config_option *config_history_display_default;
 extern struct t_config_option *config_network_connection_timeout;
 extern struct t_config_option *config_network_gnutls_ca_file;
 extern struct t_config_option *config_network_gnutls_handshake_timeout;
+extern struct t_config_option *config_network_proxy_curl;
 
 extern struct t_config_option *config_plugin_autoload;
 extern struct t_config_option *config_plugin_debug;
